# async_server_client

./: Cargo.toml
base/: Cargo.toml
base/src/: client.rs  lib.rs  server.rs
client/: Cargo.toml
client/src/: main.rs  state.rs
server/: Cargo.toml
server/src/: handler.rs  main.rs
smart_device/: Cargo.toml
smart_device/src/: lib.rs
