[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
anyhow = "1.0.51"
tokio = { version = "1.25.0", features = ["net", "io-util", "macros", "rt-multi-thread"] }
async-trait = "0.1.64"