[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }
smart_device = { path = "../smart_device" }
anyhow = "1.0.51"
dashmap = "4.0.2"
chrono = "0.4.19"
tokio = { version = "1.25.0", features = ["net", "io-util", "macros", "rt-multi-thread"] }